Fix segmented input display in dark mode

--- a/src/css/wysi.css
+++ b/src/css/wysi.css
@@ -343,6 +343,7 @@
 }
 
 .wysi-segmented input:checked + label {
+  color: #333;
   background-color: var(--wysi-highlight);
 }
 
